# TalkWithRustGPT

./: .dockerignore  .gitattributes  .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json
.github/workflows/: main.yml
docker/win-cross/: Dockerfile  entrypoint.sh
docs/: architecture.md  commands.md  features.md  overview.md  setup.md
public/: github-markdown-light.css
scripts/: build-win-exe.sh
src/: App.css  App.tsx  styles.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  mods.rs
src-tauri/src/manage/: chatgpt.rs  claude.rs  command.rs  filetitle.rs  gemini.rs  message.rs  mod.rs  utils.rs
src-tauri/src/mods/: requests.rs  voice.rs
src-tauri/src/sub/: client.rs  mod.rs  prompts.rs
src/common/: string.tsx
src/components/: drug.tsx  image.tsx  prompts.tsx
