[package]
name = "talk-with-rust-gpt"
version = "0.0.5"
description = "Talk With Rust GPT"
authors = ["you"]
licence = "MIT OR Apache-2.0"
repository = "https://github.com/go-numb/TalkWithRustGPT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chatgpt_rs = "1.2.3"
tokio = "1.35.1"
once_cell = "1.19.0"
markdown = "1.0.0-alpha.16"
chrono = "0.4.33"
directories = "5.0.1"
bouyomi4rs = "0.2.0"
rs_openai = "0.4.1"
futures = "0.3.30"
tiktoken-rs = "0.5.8"
log = "0.4.20"
env_logger = "0.11.1"
dotenv = "0.15.0"
reqwest = { version = "0.11.24", features = ["blocking"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
