[package]
name = "talkwithrustv2"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "talkwithrustv2_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
env_logger = "0.11.8"
log = "0.4.27"
dotenv = "0.15.0"
reqwest = { version = "0.12.15", features = ["blocking", "json"] }
directories = "6.0.0"
tiktoken-rs = "0.6.0"
markdown = "1.0.0-alpha.21"
bouyomi4rs = "0.2.1"
chrono = "0.4.40"
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread", "time"] }
base64 = "0.22.1"
